--- a/frontend/src/modules/Home/SignatureStrip/SignatureStrip.css
+++ b/frontend/src/modules/Home/SignatureStrip/SignatureStrip.css
@@ -10,7 +10,7 @@
   align-items: flex-start;
   border: 1px solid #ffffff26;
   box-shadow: 0 8px 32px #0006;
-  max-width: 320px;
+  width: 260px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -63,4 +63,16 @@
 .sig-sub {
   font-size: 11px;
   color: #b3b3b3;
+}
+
+@media (max-width: 300px) {
+  .signature-strip {
+    left: 50%;
+    right: auto;
+    transform: translateX(-50%);
+    width: calc(100vw - 50px);
+  }
+  .sig-sub {
+    text-align: center;
+  }
 }
