--- a/frontend/src/modules/Home/Home.css
+++ b/frontend/src/modules/Home/Home.css
@@ -42,14 +42,6 @@
   line-height: 1.7;
   padding-inline: 20px;
   text-align: center;
-
-  /* Glassmorphism effect */
-  backdrop-filter: blur(12px);
-  -webkit-backdrop-filter: blur(12px);
-  background-color: rgba(0, 0, 0, 0.8);
-  border: 1px solid rgba(255, 255, 255, 0.1);
-  border-radius: 0.5rem;
-  padding: 2.5rem 1.25rem;
 }
 
 .manifesto-article-top p {
@@ -139,6 +131,9 @@
     .manifesto-article {
       margin-bottom: 0px !important;
     }
+  }
+  .manifesto-article {
+    padding-bottom: 0.5em;
   }
 }
 @media (min-width: 640px) {
