--- a/frontend/src/modules/Home/SignatureModal/SignatureCard/Card.css
+++ b/frontend/src/modules/Home/SignatureModal/SignatureCard/Card.css
@@ -45,25 +45,28 @@
 
 .card-profile {
   display: flex;
-  align-items: center;
-  gap: 60px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
   flex: 1;
-  margin-left: 30px;
+  margin-left: 20px;
+  margin-top: 48px;
 }
 
 .card-avatar {
   border-radius: 20%;
   object-fit: cover;
-  width: 80px !important;
-  height: 80px !important;
-  scale:1.5;
+  width: 64px !important;
+  height: 64px !important;
+  scale: 1.1;
+  margin-bottom: 12px;
 }
 
 .card-user-info {
   display: flex;
-  flex-direction: row;
-  align-items: baseline;
-  gap: 8px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 0;
 }
 
 .card-name {
